# netrunner-v2-decoders

./: .gitignore  Cargo.toml  README.md
generated_decoders/: mod.rs
generated_decoders/bubblegum_decoder/: mod.rs
generated_decoders/bubblegum_decoder/accounts/: tree_config.rs
generated_decoders/bubblegum_decoder/instructions/: decompress_v1.rs  mint_to_collection_v1.rs  mod.rs  set_and_verify_collection.rs  set_decompressible_state.rs  set_tree_delegate.rs  transfer.rs  unverify_creator.rs  update_metadata.rs  verify_creator.rs
generated_decoders/bubblegum_decoder/types/: bubblegum_event_type.rs  decompressible_state.rs  leaf_schema.rs  metadata_args.rs  mod.rs  version.rs
src/: lib.rs
src/generated_decoders/: mod.rs
src/generated_decoders/amm-decoder/: Cargo.toml
src/generated_decoders/bubblegum_decoder/: mod.rs
src/generated_decoders/byreal_clmm_decoder/: mod.rs
src/generated_decoders/byreal_router_decoder/: mod.rs
src/generated_decoders/candy_machine_core_decoder/: mod.rs
src/generated_decoders/candy_machine_core_v3_decoder/: mod.rs
src/generated_decoders/candy_machine_v1_decoder/: mod.rs
src/generated_decoders/candy_machine_v2_decoder/: mod.rs
src/generated_decoders/candy_machine_v3_decoder/: mod.rs
src/generated_decoders/dflow_v4_decoder/: mod.rs
src/idl_inputs/: flash_trade_perpetuals.json  flash_trade_perps.json  flash_trade_perps_v2.json  heaven.json  jito_tip_router.json  jupiter_locked_voter.json  jupiter_merkle_distributor.json  jupiter_perpetuals.json  titan_swap.json  unstake.json
(+2040 files in other folders)
