[package]
name = "netrunner-v2-decoders"
version = "0.1.0"
edition = "2021"

[dependencies]
carbon-core = "0.6"
carbon-proc-macros = "0.6"
carbon-macros = "0.6"
solana-sdk = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.3"
mpl-core = { version = "0.8.0" }
serde-big-array = "0.5"
mpl-bubblegum = { git = "https://github.com/metaplex-foundation/mpl-bubblegum", branch = "main" }

[[bin]]
name = "generate_decoders"
path = "src/bin/generate_decoders.rs"